--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,17 @@ android {
 }
 
 dependencies {
+    implementation "androidx.camera:camera-video:1.1.0-alpha11"
+    implementation "androidx.camera:camera-camera2:1.1.0-alpha11"
+    implementation "androidx.camera:camera-lifecycle:1.1.0-alpha11"
+    implementation "androidx.camera:camera-view:1.0.0-alpha31"
+    implementation "androidx.camera:camera-extensions:1.0.0-alpha31"
+    implementation "androidx.lifecycle:lifecycle-service:2.4.0"
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+
+    implementation(project(":rec_service"))
 }
