-Add module app_setting -add feature "Show Preview?"

--- a/app_setting/build.gradle
+++ b/app_setting/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 android {
-    namespace 'ziuzangdev.repo.rec_service'
+    namespace 'ziuzangdev.repo.app_setting'
     compileSdk 33
 
     defaultConfig {
@@ -31,18 +31,11 @@ android {
 }
 
 dependencies {
-    implementation "androidx.camera:camera-video:1.1.0-alpha11"
-    implementation "androidx.camera:camera-camera2:1.1.0-alpha11"
-    implementation "androidx.camera:camera-lifecycle:1.1.0-alpha11"
-    implementation "androidx.camera:camera-view:1.0.0-alpha31"
-    implementation "androidx.camera:camera-extensions:1.0.0-alpha31"
-    implementation "androidx.lifecycle:lifecycle-service:2.4.0"
+
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
-    implementation(project(":app_setting"))
 }
