--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,10 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
 }
-
+apply plugin: 'kotlin-kapt'
 android {
+    dataBinding.enabled true
+
     namespace 'ziuzangdev.repo.recordcambackgroundproject'
     compileSdk 33
 
@@ -37,6 +39,12 @@ android {
 }
 
 dependencies {
+    implementation 'com.github.noelchew:storage-chooser:2.0.4.4a'
+    implementation ("com.github.invissvenska:ModalBottomSheetDialog:1.0.5")
+    implementation ("com.github.RaviKoradiya:LiveAdapter:1.3.4-alpha")
+    kapt ("com.android.databinding:compiler:7.3.0")
+    implementation 'com.google.android.material:material:1.4.0'
+    kapt 'com.android.databinding:compiler:8.0.0-alpha07'
     implementation "androidx.camera:camera-video:1.1.0-alpha11"
     implementation "androidx.camera:camera-camera2:1.1.0-alpha11"
     implementation "androidx.camera:camera-lifecycle:1.1.0-alpha11"
