--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,13 +35,20 @@ android {
 
     buildFeatures {
         viewBinding = true
+        dataBinding true
     }
 }
 
 dependencies {
+    implementation ("com.github.SimformSolutionsPvtLtd:SSImagePicker:2.0")
+    implementation ("com.github.MehdiKh93:Shortcut:1.0.2")
+    implementation "androidx.core:core:1.6.0"
+    implementation 'androidx.core:core-google-shortcuts:1.0.0'
     implementation 'com.github.noelchew:storage-chooser:2.0.4.4a'
     implementation ("com.github.invissvenska:ModalBottomSheetDialog:1.0.5")
     implementation ("com.github.RaviKoradiya:LiveAdapter:1.3.4-alpha")
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     kapt ("com.android.databinding:compiler:7.3.0")
     implementation 'com.google.android.material:material:1.4.0'
     kapt 'com.android.databinding:compiler:8.0.0-alpha07'
