--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,22 +20,41 @@
     <uses-permission
         android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:requestLegacyExternalStorage="true"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RecordCamBackgroundProject"
         tools:targetApi="31">
         <activity
+            android:name=".View.Activity.SendBroadcastRecordActivity"
+            android:exported="true"
+            android:theme="@android:style/Theme.NoDisplay"/>
+        <activity
+            android:name="com.app.imagepickerlibrary.ui.activity.ImagePickerActivity"
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/SSImagePicker" />
+        <receiver
+            android:name=".Control.BroadcastReceive.ShortcutRecordReceiver"
+            android:exported="true"
+            android:permission="com.android.launcher.permission.INSTALL_SHORTCUT">
+            <intent-filter>
+                <action android:name="ziuzangdev.repo.recordcambackgroundproject.SHORTCUT_CLICKED" />
+            </intent-filter>
+        </receiver>
+
+        <activity
             android:name=".View.Activity.SettingActivity"
-            android:exported="false"
-            android:theme="@style/Theme.Diary.NoActionBar"/>
+            android:exported="true"
+            android:theme="@style/Theme.Diary.NoActionBar" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
