--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ android {
 }
 
 dependencies {
+    implementation ("com.github.guy-4444:SmartRateUsDialog-Android:1.00.08")
+    implementation ("com.github.bumptech.glide:glide:4.15.0")
+    annotationProcessor ("com.github.bumptech.glide:compiler:4.15.0")
     implementation ("com.github.SimformSolutionsPvtLtd:SSImagePicker:2.0")
     implementation ("com.github.MehdiKh93:Shortcut:1.0.2")
     implementation "androidx.core:core:1.6.0"
