-add beta module "rec_face_tracking"

--- a/settings.gradle
+++ b/settings.gradle
@@ -17,3 +17,4 @@ rootProject.name = "RecordCamBackground Project"
 include ':app'
 include ':rec_service'
 include ':app_setting'
+include ':rec_face_tracking'
